# q-store

./: .editorconfig  .env.example  .gitignore  .gitignore_distribution  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_BUILD.md  DIRECTORY_STRUCTURE.md  DISTRIBUTION_README.md  LICENCE  MANIFEST.in  ML_MODULE_MIGRATION.md  Makefile  PARALLEL_EXECUTION_VERIFIED.md  PERFORMANCE_REALITY_CHECK.md  QUICKSTART.md  README.md  README_v3_3.md  V3.1_IMPLEMENTATION_SUMMARY.md  V3_2_IMPLEMENTATION_SUMMARY.md  V4_1_1_COMPLETION_VERIFICATION.md  build_binary_distribution.sh  environment.yml  examples_v3_3.py  pyproject.toml  quantum_db_design_doc.md  quantum_db_design_v2.md  quickstart_v3_2.py  setup.cfg  setup.py  show_coverage.py  test_before_build.sh  training_log.csv  verify_structure.py  verify_v3_2.py
.github/: WORKFLOWS.md
.github/workflows/: build-linux.yml  build-macos.yml  build-wheels-improved.yml  build-wheels-linux.yml  build-wheels-macos-arm.yml  build-wheels-macos-intel.yml  build-wheels-test.yml  build-wheels-windows.yml  build-wheels.yml  build-windows.yml  ci.yml  create-release-branch.yml  (+2 more)
docs/: ARCHITECTURE.md  Architecture_v3_5_DESIGN.md  Architecture_v4_0_DESIGN.md  Architecture_v4_1_DESIGN.md  CLOSED_SOURCE_DISTRIBUTION_GUIDE.md  FINAL_DECISION_PACKAGE_V4_0.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IONQ_BATCHING_SOLUTION.md  IONQ_OPTIMIZATION_SUMMARY.md  PERFORMANCE_REALITY_CHECK.md  Q-STORE_PERFORMANCE_REPORT.md  Q-STORE_V4_1_1_ARCHITECTURE_DESIGN.md  Q-STORE_V4_1_1_DESIGN_UPDATES.md  Q-STORE_V4_1_1_IMPLEMENTATION_SUMMARY.md  Q-STORE_V4_2_0_ARCHITECTURE_DESIGN.md  QSTORE_V4_1_ARCHITECTURE_DESIGN.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_REFERENCE_GTIHUB_ACTIONS.md  Quantum-Native_Database_Architecture_v3_2.md  Quantum-Native_Database_Architecture_v3_3.md  Quantum-Native_Database_Architecture_v3_3_1_CORRECTED.md  Quantum_Native_Database_Architecture_v3_4_DESIGN.md  README.md  RELEASE_v4.0.md  RESTRUCTURING_SUMMARY.md  TFQ_COMPARISON_AND_ARCHITECTURAL_DECISION.md  V3_4_ANALYSIS_AND_V3_5_RECOMMENDATIONS.md  V3_4_IMPLEMENTATION_COMPLETE.md  V3_5_IMPLEMENTATION_SUMMARY.md  V4_1_1_FINAL_REPORT.md  V4_1_1_MIGRATION_GUIDE.md  V4_1_IMPLEMENTATION_COMPLETE.md  quantum_benchmark_ui.html  quantum_db_analysis.md  quantum_db_v3_md.md  v3_4_ANALYSIS_SUMMARY.md
examples/: .env.example  .gitignore  QUANTUM_DB_INTEGRATION.md  QUICK_REFERENCE.md  README.md  SETUP.md  advanced_features.py  basic_example.py  basic_pinecone_setup.py  basic_usage.py  chemistry_examples.py  complete_workflow_example.py  demo_logging.py  environment.yml  error_correction_examples.py  examples_v3_4.py  financial_example.py  ml_training_example.py  pyproject.toml  qml_examples.py  quantum_db_quickstart.py  run_all_validation.py  setup.py
examples/LOG/: benchmark-demo-20251215_214109.json  benchmark-test_example-20251215_213914.json  log-20251215_213644.txt  log-20251215_213914.txt  log-20251215_214109.txt
examples/async_features/: basic_async_usage.py  real_ionq_hardware.py
examples/data_management/: backend_client_example.py  data_adapters_example.py  data_loaders_example.py  data_preprocessing_example.py  generators_validation_augmentation_example.py
examples/docs/: PROJECT_SEPARATION.md  REACT_QUICK_REFERENCE.md  REACT_TRAINING_WORKFLOW.md  TINYLLAMA_TRAINING_README.md
examples/ml_frameworks/: IMAGE_CLASSIFICATION_README.md  KERAS_VS_QSTORE_COMPARISON.md  OPTIMIZATION_SUMMARY.md  QSTORE_OPTIMIZATION_GUIDE.md  QUICKSTART.md  benchmark_optimizations.py  check_image_classification_deps.py  end_to_end_workflow.py  fashion_mnist_plain.py  fashion_mnist_with_backend_api.py  hyperparameter_tuning_example.py  image_classification_from_scratch.py  image_classification_qstore_optimized.py  mlflow_tracking_example.py  run_fashion_mnist_plain.sh  test_ionq_parallel.py
examples/ml_frameworks/pytorch/: fashion_mnist_pytorch.py  fashion_mnist_quantum_layers.py
examples/ml_frameworks/tensorflow/: fashion_mnist_quantum_layers.py  fashion_mnist_tensorflow.py
examples/ml_training/: early_stopping_callbacks_example.py  hyperparameter_tuning_example.py  mlflow_tracking_example.py  schedulers_example.py
examples/optimization/: optimization_demo.py
examples/pytorch/: fashion_mnist.py  fashion_mnist_quantum_db.py
examples/scripts/: run_react_training.sh  verify_installation.py  verify_tinyllama_example.py
examples/src/q_store_examples/: __init__.py  examples_v3_2.py  examples_v3_4.py  tinyllama_react_training.py  utils.py
examples/tensorflow/: fashion_mnist.py  fashion_mnist_quantum_db_tf.py
examples/tests/: test_pinecone_ionq_connection.py
examples/v4_1_0/: README.md  async_performance_demo.py  fashion_mnist_pytorch.py  fashion_mnist_tensorflow.py  framework_integration_demo.py  optimization_demo.py  storage_demo.py
examples/validation/: gradient_validation.py  simple_classification.py
q_store/: __init__.py  entanglement_registry.py  ionq_backend.py  quantum_database.py  state_manager.py
scripts/: README.md  build_binary_distribution.sh  manual_publish.sh  migrate-workflows.sh  release.sh  run_coverage.sh  test_wheel_metadata.sh  test_workflow_locally.sh
tests/: BENCHMARKS.md  test_algorithms.py  test_analysis.py  test_backends.py  test_benchmarks.py  test_chemistry.py  test_compiler.py  test_constants_exceptions.py  test_core.py  test_embeddings.py  test_enhanced_manager.py  test_entanglement.py  test_integration.py  test_integration_v4.py  test_ionq_hardware_backend.py  test_kernels.py  test_lightning_backend.py  test_mitigation.py  test_ml.py  test_noise.py  test_optimization.py  test_performance_monitor.py  test_profiling.py  test_pytorch_integration.py  test_qsim_backend.py  test_quantum_database.py  test_simple.py  test_smart_router.py  test_templates.py  test_tensorflow_integration.py  test_tomography.py  test_unified_circuit.py  test_v3_5_features.py  test_v4_1_1_callbacks.py  test_v4_1_1_data_management.py  test_v4_1_1_early_stopping.py  test_v4_1_1_schedulers.py  test_v4_1_1_tracking.py  test_v4_1_1_tuning.py  test_v4_1_layers.py  (+9 more)
(+200 files in other folders)
