[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "q-store"
version = "4.0.0"
description = "Quantum-Native Database Architecture leveraging quantum mechanical properties"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Yucel Zengin", email = "yucelz@gmail.com"}
]
maintainers = [
    {name = "Yucel Zengin", email = "yucelz@gmail.com"}
]
keywords = [
    "quantum",
    "database",
    "vector-search",
    "quantum-computing",
    "ionq",
    "superposition",
    "entanglement"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.10.0",
    "cirq>=1.3.0",
    "cirq-ionq>=1.3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
backends = [
    "pinecone>=3.0.0",
    "pgvector>=0.2.0",
    "qdrant-client>=1.7.0",
]
ml = [
    "torch>=2.0.0",
]
build = [
    "Cython>=0.29.0",
    "wheel",
    "twine",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
]
all = [
    "q-store[backends,ml,dev,docs]"
]

[project.urls]
Homepage = "http://www.q-store.tech"
Documentation = "https://github.com/yucelz/q-store/tree/main/docs"
Repository = "https://github.com/yucelz/q-store"
Issues = "https://github.com/yucelz/q-store/issues"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
license-files = ["LICENCE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["q_store*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
q_store = ["py.typed", "__init__.py"]

# Cython compilation settings
[tool.cython]
language_level = 3
boundscheck = false
wraparound = false
cdivision = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "cirq.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --asyncio-mode=auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["src/q_store"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326",
]

[tool.pylint.format]
max-line-length = 100
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
